------------------------------------------------------------------------------------

>>> NOTICE!!! <<<

This file contains SPOILERS, which might ruin your IVAN experience totally. The file
is also provided AS IS and is probably completely unreadable.

------------------------------------------------------------------------------------

December 27 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Added floating eye
	
December 22 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Teleport control is now more user-friendly
	* Halved the strength required to use two-handed weapons
	* Gcc 2.9x now compiles the game correctly

December 18 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Doubled nutrition level limits
	* Increased NP values by 50%
	* Adjusted the probability distribution of kiwi amounts
	* Further decreased the amount of wolves in the special level
	* Decreased gauntlets' InElasticityPenaltyModifier from 30% to 20%
	* Severed zombie bodyparts are now initially spoiled like the corpse
	* Plants no longer stand but are rooted
	* Tweaked the danger algorithm so that monsters value helmets more
	* Added two random pieces of armor to UT level 2
	* Greater carnivorous plants are now a bit easier
	* Torso must now be in bad condition before head or groin can be destroyed

December 16 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Corrected a fatal bug in the door breaking code
	* Legs swapped
	* Fixed the Evil Boulder Bug of the Insane Environmentalist once and for all
	* You can no longer 'l'ook at walls to see if they contain jewels
	* Kobolds are little less ugly now

December 10 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Kobolds tweaked
	* Added Spoiler etc warning to ChangeLog

December 10 2002 Heikki Sairanen <heikki.sairanen@phpoint.net>

	* Menu.pcx looks a bit clearer

December 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Outlook tweaks

December 10 2002 Timo Kiviluoto <sonor@phpoint.fi>

	* Added a terrible gum solution to fix the unicorns kicking
