@@ -4197,3 +4197,9 @@ uchar floatingeye::TakeHit(character* Enemy, item* Weapon, float Damage, float T
 
   return Return;
 }
+
+const std::string& humanoid::GetStandVerb() const
+{
+  static std::string HasntFeet = "crawling";
+  return HasFeet() ? character::GetStandVerb() : HasntFeet;
+}
