@@ -233,6 +233,7 @@
 #define EFFECT_ANTIDOTE 9
 #define EFFECT_CONFUSE 10
 #define EFFECT_POLYMORPH 11
+#define EFFECT_ESP 12
 
 #define CEM_NOTHING 0
 #define CEM_SCHOOL_FOOD 1
